--- a/src/app/dev-team/dev-team.component.html
+++ b/src/app/dev-team/dev-team.component.html
@@ -15,11 +15,15 @@
     <img src="https://assets.tcgdex.net/fr/bw/bw4/86/low.jpg" alt="Rachid" />
   </div>
   <div class="cell">
-    <img src="https://assets.tcgdex.net/fr/swsh/swsh8/241/low.jpg" alt="Damien" />
+    <img
+      src="https://assets.tcgdex.net/fr/swsh/swsh8/241/low.jpg"
+      alt="Damien"
+    />
   </div>
   <div class="cell">
     <img src="https://assets.tcgdex.net/fr/swsh/swsh2/154/low.jpg" alt="Omar" />
   </div>
-
+</div>
+<div class="button-class">
   <button routerLink="/carte">Retourner à l' accueil</button>
 </div>
