--- a/src/app/dev-team/dev-team.component.css
+++ b/src/app/dev-team/dev-team.component.css
@@ -36,17 +36,18 @@ a {
   align-items: center;
   width: 100%;
   height: 100%;
+  text-align: center;
 }
 
 img {
-height: auto;
-width: auto;
-
+  height: auto;
+  width: auto;
 }
 
 button {
   display: block;
-  margin: 1rem auto;
+  align-items: center;
+  margin: 2rem auto;
   padding: 0.5rem 1rem;
   font-size: 1rem;
   background-color: #007bff;
