--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,17 +1,16 @@
-.basdepage{
-    display: flex;
-   align-items: center;
-    justify-content: center;
-    margin-top: 15%;
+.basdepage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  bottom: 0;
+  width: 100%;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    flex: 1;
-    margin-right: 10px;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  flex: 1;
+  margin-right: 10px;
 }
-
-
-  
