--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -61,7 +61,6 @@ button {
 .recherche {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 2rem;
 }
 .Card {
   display: flex;
@@ -244,21 +243,21 @@ button {
     display: none;
   }
 }
-h1{
-    background-color: #e55366;
-    border: none;
-    color: white;
-    padding: 1vw 1vw;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 3.5vh;
-    margin: 1vh 1vw;
-    cursor: pointer;
-    flex: 1;
-    height: auto;
-    width: auto;
-    border-radius: 15%;
+h1 {
+  background-color: #e55366;
+  border: none;
+  color: white;
+  padding: 1vw 1vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3.5vh;
+  margin: 1vh 1vw;
+  cursor: pointer;
+  flex: 1;
+  height: auto;
+  width: auto;
+  border-radius: 15%;
 }
 
 .ToClick img {
@@ -274,41 +273,32 @@ h1{
   background-color: #c4c4c4;
   border: 5px solid #e55366;
   color: black;
-  border-radius: 10%; 
+  border-radius: 10%;
   display: table-cell;
- 
 }
-.container{
-overflow: auto;
-
+.container {
+  overflow: auto;
 }
 
-.picture{
-float: left;
-width:50%
+.picture {
+  float: left;
+  width: 50%;
 }
 
-
-@media handheld and (orientation:portrait), (max-width:500px) {
-
-  
-  .ToClick img{
-
-      width: 60%;
-      height: 35%;
-      border-radius: 10%;
-      object-fit: cover;
-      box-shadow: 0 0 5px rgb(212, 219, 34);
-    
-
+@media handheld and (orientation: portrait), (max-width: 500px) {
+  .ToClick img {
+    width: 60%;
+    height: 35%;
+    border-radius: 10%;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgb(212, 219, 34);
   }
 
-.pokemonDetails {
-   
-  display: table-cell;
-  flex-wrap: wrap;
- 
-
-}
-
+  .pokemonDetails {
+    display: table-cell;
+    flex-wrap: wrap;
+  }
+  .buttonAfficherPlusEtMoins {
+    display: none;
+  }
 }
