--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -62,3 +62,11 @@ button {
   padding: 8px;
   margin-top: 16px;
 }
+
+@media (max-width: 768px) {
+  div {
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
