--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -166,7 +166,6 @@ button {
 }
 
 .nom {
-  background-color: #e55366;
   border: none;
   color: white;
   padding: 1vw 1vw;
@@ -255,12 +254,14 @@ h1{
  
 }
 .container{
-overflow: auto;
+display: flex;
+align-items: center;
 
 }
 
 .picture{
-float: left;
+display: block;
+margin:auto;
 width:50%
 }
 
