--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -46,37 +46,24 @@
           </div>
           <div class="message">
             <label for="message"></label>
-            <textarea id="message" formControlName="message" placeholder="Message :"></textarea>
-        </div>    
-            </form>
-        </div>
-        <div id="buttonbottomPicture"></div>
-        <div id="speakers">
-          <div class="sp"></div>
-          <div class="sp"></div>
-          <div class="sp"></div>
-          <div class="sp"></div>
-        </div>
+            <textarea
+              id="message"
+              formControlName="message"
+              placeholder="Message :"
+            ></textarea>
+          </div>
+          <!-- <div> 
+            <br> 
+            <button type="submit">Envoyé</button> 
+        </div>   -->
+        </form>
       </div>
-      <div id="bigbluebutton"></div>
-      <div id="barbutton1"></div>
-      <div id="barbutton2"></div>
-      <div id="cross">
-        <div id="leftcross">
-          <div id="leftT"></div>
-        </div>
-        <div id="topcross">
-          <div id="upT"></div>
-        </div>
-        <div id="rightcross">
-          <div id="rightT"></div>
-        </div>
-        <div id="midcross">
-          <div id="midCircle"></div>
-        </div>
-        <div id="botcross">
-          <div id="downT"></div> 
-        </div>
+      <div id="buttonbottomPicture"></div>
+      <div id="speakers">
+        <div class="sp"></div>
+        <div class="sp"></div>
+        <div class="sp"></div>
+        <div class="sp"></div>
       </div>
     </div>
       <div id="bigbluebutton" (click)="change(); submitMyform();"> GO !!!</div>
@@ -131,31 +118,4 @@
         <div id="curve1_right"></div>
         <div id="curve2_right"></div>
       </div>
-      <div id="blueButtons1">
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-      </div>
-      <div id="blueButtons2">
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-        <div class="blueButton"></div>
-      </div>
-      <div id="miniButtonGlass4"></div>
-      <div id="miniButtonGlass5"></div>
-      <div id="barbutton3"></div>
-      <div id="barbutton4"></div>
-      <div id="yellowBox1" (click)=submitMyform()>Envoyer</div>
-      <div id="yellowBox2"></div>
-      <div id="bg_curve1_right"></div>
-      <div id="bg_curve2_right"></div>
-      <div id="curve1_right"></div>
-      <div id="curve2_right"></div>
     </div>
-  </div>
-</section>
-
