--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -77,6 +77,7 @@
       <img (click)="carteToClick()" src="{{ image }}/{{high}}" alt="" />
     </div>
     <div class="pokemonDetails">
+      <div>
       <p *ngIf="infoAffichage.description">
         <b>Déscription : </b> {{ infoAffichage.description }}
       </p>
@@ -102,6 +103,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </div>
   </section>
 </div>
