Ajout des mediaquaris

--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -75,7 +75,7 @@
   </div>
   <section class="container">
       <div class="picture">
-       <img (click)="carteToClick()" src="{{ image }}/{{high}}" alt="" />
+       <img (click)="carteToClick()" src="{{ image }}/{{high}}" alt="" [@zoomIn] />
       </div>
       <div class="pokemonDetails">
       <div>
