--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -100,6 +100,7 @@ button {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  cursor: pointer;
 }
 
 .search {
@@ -191,7 +192,6 @@ button {
   display: inline-block;
   font-size: 5.5vh;
   margin: 1vh 1vw;
-  cursor: pointer;
   flex: 1;
   height: auto;
   width: auto;
@@ -201,6 +201,7 @@ button {
 .ToClick img {
   width: 35%;
   height: 35%;
+  cursor: pointer;
   border-radius: 10%;
   object-fit: cover;
   box-shadow: 0 0 5px rgb(212, 219, 34);
@@ -226,6 +227,7 @@ button {
 .types-select select {
   background-color: #e55366;
   color: white;
+  display: none;
 }
 
 
@@ -239,7 +241,6 @@ h1{
     display: inline-block;
     font-size: 3.5vh;
     margin: 1vh 1vw;
-    cursor: pointer;
     flex: 1;
     height: auto;
     width: auto;
@@ -248,6 +249,7 @@ h1{
 
 .ToClick img {
   width: 60%;
+  cursor: pointer;
   height: 35%;
   border-radius: 10%;
   object-fit: cover;
@@ -268,12 +270,13 @@ h1{
   color: black;
   border-radius: 10%; 
   display: table-cell;
+  max-width: 40%;
  
 }
 .container{
 display: flex;
 align-items: center;
-
+}
 
 .picture{
 display: block;
@@ -281,27 +284,35 @@ margin:auto;
 width:50%
 }
 
-
-@media handheld and (orientation:portrait), (max-width:500px) {
-
-  
-  .ToClick img{
-
-      width: 60%;
-      height: 35%;
-      border-radius: 10%;
-      object-fit: cover;
-      box-shadow: 0 0 5px rgb(212, 219, 34);
-    
-
+@media handheld and (orientation: portrait), (max-width: 750px) {
+  .ToClick img {
+    width: 60%;
+    height: 35%;
+    border-radius: 10%;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgb(212, 219, 34);
   }
-
-/*.pokemonDetails {
-   
-  display: table-cell;
-  flex-wrap: wrap;
- 
+  .pokemonDetails {
+    display: table-cell;
+    flex-wrap: wrap;
+  }
+  .buttonAfficherPlusEtMoins {
+    display: none;
+  }
+  .types-select select {
+    background-color: #E55366;
+    color: white;
+    display: initial;
+  }
+  button {
+    display: none;
+  }
+  
 }
 
-}
+
+
+
+
+
 
