--- a/src/app/carte/carte.component.css
+++ b/src/app/carte/carte.component.css
@@ -110,6 +110,8 @@ button {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
+  align-items: center;
+  justify-content: center;
 }
 .buttonRecherche {
   display: flex;
